--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,16 @@
 {
  "name": "Setor Fight Tour Virtual",
- "background_color": "#FFFFFF",
  "display": "fullscreen",
- "start_url": "index.htm?installed=true",
  "icons": [
   {
-   "sizes": "512x512",
+   "sizes": "150x150",
    "type": "image/png",
-   "src": "misc/icon512.png"
+   "src": "misc/icon150.png"
   },
   {
-   "sizes": "192x192",
+   "sizes": "16x16",
    "type": "image/png",
-   "src": "misc/icon192.png"
+   "src": "misc/icon16.png"
   },
   {
    "sizes": "180x180",
@@ -20,14 +18,9 @@
    "src": "misc/icon180.png"
   },
   {
-   "sizes": "150x150",
+   "sizes": "192x192",
    "type": "image/png",
-   "src": "misc/icon150.png"
-  },
-  {
-   "sizes": "64x64",
-   "type": "image/png",
-   "src": "misc/icon64.png"
+   "src": "misc/icon192.png"
   },
   {
    "sizes": "32x32",
@@ -35,10 +28,17 @@
    "src": "misc/icon32.png"
   },
   {
-   "sizes": "16x16",
+   "sizes": "512x512",
    "type": "image/png",
-   "src": "misc/icon16.png"
+   "src": "misc/icon512.png"
+  },
+  {
+   "sizes": "64x64",
+   "type": "image/png",
+   "src": "misc/icon64.png"
   }
  ],
- "theme_color": "#FFFFFF"
+ "background_color": "#FFFFFF",
+ "theme_color": "#FFFFFF",
+ "start_url": "index.htm?installed=true"
 }
