--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,13 @@
 {
+ "name": "Setor Fight Tour Virtual",
+ "theme_color": "#000000",
+ "display": "fullscreen",
+ "background_color": "#000000",
  "icons": [
   {
    "type": "image/png",
-   "sizes": "150x150",
-   "src": "misc/icon150.png"
-  },
-  {
-   "type": "image/png",
-   "sizes": "16x16",
-   "src": "misc/icon16.png"
-  },
-  {
-   "type": "image/png",
-   "sizes": "180x180",
-   "src": "misc/icon180.png"
+   "sizes": "512x512",
+   "src": "misc/icon512.png"
   },
   {
    "type": "image/png",
@@ -22,23 +16,29 @@
   },
   {
    "type": "image/png",
-   "sizes": "32x32",
-   "src": "misc/icon32.png"
+   "sizes": "180x180",
+   "src": "misc/icon180.png"
   },
   {
    "type": "image/png",
-   "sizes": "512x512",
-   "src": "misc/icon512.png"
+   "sizes": "150x150",
+   "src": "misc/icon150.png"
   },
   {
    "type": "image/png",
    "sizes": "64x64",
    "src": "misc/icon64.png"
+  },
+  {
+   "type": "image/png",
+   "sizes": "32x32",
+   "src": "misc/icon32.png"
+  },
+  {
+   "type": "image/png",
+   "sizes": "16x16",
+   "src": "misc/icon16.png"
   }
  ],
- "name": "Setor Fight Tour Virtual",
- "theme_color": "#000000",
- "display": "fullscreen",
- "start_url": "index.htm?installed=true",
- "background_color": "#000000"
+ "start_url": "index.htm?installed=true"
 }
